Minor changes, trying to figure issues out

--- a/index.html
+++ b/index.html
@@ -2,14 +2,18 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <link href='http://fonts.googleapis.com/css?family=Berkshire+Swash' rel='stylesheet' type='text/css'>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css">
 
   <title>Fish Store</title>
 </head>
-<body ng-app="fishApp">
-
+<body ng-app="storeApp">
+  <div>
+    <header>Finn's Fancy Fish</header>
+  </div>
+  <hr></hr>
 <ng-view></ng-view>
 
 
