--- a/index.html
+++ b/index.html
@@ -4,16 +4,18 @@
   <meta charset="UTF-8">
   <link href='http://fonts.googleapis.com/css?family=Berkshire+Swash' rel='stylesheet' type='text/css'>
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet"
+   href="bower_components/bootstrap/dist/css/bootstrap.css">
+
+  <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="style.css">
-  <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css">
+
 
   <title>Fish Store</title>
 </head>
-<body ng-app="storeApp">
-  <div>
-    <header>Finn's Fancy Fish</header>
-  </div>
-  <hr></hr>
+<body ng-app="fishApp">
+
+
 <ng-view></ng-view>
 
 
@@ -27,9 +29,9 @@
 <script src="bower_components/angular-route/angular-route.js"></script>
 <script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
 
-<script src="app.js"></script>
-<script src="controller.js"></script>
-<script src="service.js"></script>
+<script src="js/app.js"></script>
+<script src="js/controller.js"></script>
+<script src="js/service.js"></script>
 
 </body>
 </html>
